[project]
name = "hello-op-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AbdulSamad200", email = "141349360+AbdulSamad200@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hello-op-ag = "hello_op_ag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["op_ag"]
